#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-12
2016-11-17 Mikhail S. Dubrovin
- CalibParsStore, GenericCalibPars - now support constants from DCS
- DCMethods - update methods, add methods for direct access to hdf5 file
- DCBase - tune doc

Tag: V00-03-11
2016-11-14 Mikhail S. Dubrovin
- DCDetectorId.id_epix - add protection and extend backward compatability for old data with missing carrierId methods
	
Tag: V00-03-10
2016-11-08 Mikhail S. Dubrovin
- Tuning of DCMethods, update of examples.
  - DCDetectorId.id_epix - returns eics Id made of 7 numbers
  - add DCMethods.print_file - print directly from file
  - dcs - add print option directly from file
  - DCMethods.add_constants - add experiment name and run number in the comment for range 
	and add them to the dict of parameters
  - update examples
	
Tag: V00-03-09
2016-10-19 Mikhail S. Dubrovin
- app/dcs - set cdir_def = None
- DCFileName.py - add methods *_repo, calibdir check for None and 'None'
- update doc in a few modules.
	
Tag: V00-03-08
2016-10-17 Mikhail S. Dubrovin
- app/dcs - hide test print messages

Tag: V00-03-07
2016-10-11 Mikhail S. Dubrovin
- DCMethods.py - add new methods
- the 1-st full-scale version of CLI in app/dcs

Tag: V00-03-06
2016-10-07 Mikhail S. Dubrovin
- add app/dcs
- add option to mark/delete objects for DCType, DCRange
	
Tag: V00-03-05
2016-10-03 Christopher O'Grady
- Change default EPIX common-mode params to 4,6,30,30 as requested by Silke

Tag: V00-03-04
2016-09-30 Christopher O'Grady
- Back out to previous default EPIX common-mode params: 4,6,30,10

Tag: V00-03-03
2016-09-28 Mikhail S. Dubrovin